added from sixteen

--- a/office-direction.html
+++ b/office-direction.html
@@ -9,6 +9,7 @@
     <!-- start css link -->
       <link rel="stylesheet" href="assets/css/styles.css">
       <link rel="stylesheet" href="assets/css/cadre-organique.css">    <!-- ====== cadre organique ======= -->
+      <link rel="stylesheet" href="assets/css/office-direction.css">
     <!-- end css link -->
 
     
@@ -161,30 +162,280 @@
        <!-- ========  star presentation direction   ============== -->
            
          <section class="p-direction section">
-             <div class="container-p-direction">
-                  <span class="title_1">Lorem ipsum dolor sit.</span>
+             <div class="container container-p-direction">
+                  <span class="title_1">Directions Centrales de l'Office National du Tourisme</span>
 
                   <div class="content content-p-direction">
                     <div class="p-direction_article">
                          <div class="pd-article_item pd-article_left">
                             <div class="pd-article_left-title">
-                                <span class="title_1"></span>
+                                <span class="title_1">Direction des Resources Humaines (DRH)</span>
                             </div>
                             <div class="pd-article_left-desc">
                                 <div class="pd-article_left-desc-item">
+                                    <span>1 </span>
+                                    <span>Personel</span>
+                                    <span> : </span>
+                                    <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                                </div>
+
+                                <div class="pd-article_left-desc-item">
                                     <span>1</span>
                                     <span>Personel</span>
+                                    <span> : </span>
+                                    <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                                </div>
+
+                                <div class="pd-article_left-desc-item">
+                                    <span>1</span>
+                                    <span>Personel</span>
+                                    <span> : </span>
                                     <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
                                 </div>
                             </div>
                          </div>
                          <div class="pd-article_item pd-article_right">
-
+                            <!-- <div class="pd-article_right_img">
+                                <img src="assets/images/" alt="">
+                            </div> -->
                             <div class="pd-article_right-numb">
-                                <span></span>
+                                <span>01</span>
                             </div>
                          </div>
                     </div>
+
+                    <div class="p-direction_article">
+                        <div class="pd-article_item pd-article_left">
+                           <div class="pd-article_left-title">
+                               <span class="title_1">Direction des Resources Humaines (DRH)</span>
+                           </div>
+                           <div class="pd-article_left-desc">
+                               <div class="pd-article_left-desc-item">
+                                   <span>1 </span>
+                                   <span>Personel</span>
+                                   <span> : </span>
+                                   <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                               </div>
+
+                               <div class="pd-article_left-desc-item">
+                                   <span>1</span>
+                                   <span>Personel</span>
+                                   <span> : </span>
+                                   <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                               </div>
+
+                               <div class="pd-article_left-desc-item">
+                                   <span>1</span>
+                                   <span>Personel</span>
+                                   <span> : </span>
+                                   <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                               </div>
+                           </div>
+                        </div>
+                        <div class="pd-article_item pd-article_right">
+                           <!-- <div class="pd-article_right_img">
+                               <img src="assets/images/" alt="">
+                           </div> -->
+                           <div class="pd-article_right-numb">
+                               <span>02</span>
+                           </div>
+                        </div>
+                   </div>
+
+
+                   <div class="p-direction_article">
+                    <div class="pd-article_item pd-article_left">
+                       <div class="pd-article_left-title">
+                           <span class="title_1">Direction des Resources Humaines (DRH)</span>
+                       </div>
+                       <div class="pd-article_left-desc">
+                           <div class="pd-article_left-desc-item">
+                               <span>1 </span>
+                               <span>Personel</span>
+                               <span> : </span>
+                               <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                           </div>
+
+                           <div class="pd-article_left-desc-item">
+                               <span>1</span>
+                               <span>Personel</span>
+                               <span> : </span>
+                               <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                           </div>
+
+                           <div class="pd-article_left-desc-item">
+                               <span>1</span>
+                               <span>Personel</span>
+                               <span> : </span>
+                               <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                           </div>
+                       </div>
+                    </div>
+                    <div class="pd-article_item pd-article_right">
+                       <!-- <div class="pd-article_right_img">
+                           <img src="assets/images/" alt="">
+                       </div> -->
+                       <div class="pd-article_right-numb">
+                           <span>03</span>
+                       </div>
+                    </div>
+               </div>
+
+
+
+               <div class="p-direction_article">
+                <div class="pd-article_item pd-article_left">
+                   <div class="pd-article_left-title">
+                       <span class="title_1">Direction des Resources Humaines (DRH)</span>
+                   </div>
+                   <div class="pd-article_left-desc">
+                       <div class="pd-article_left-desc-item">
+                           <span>1 </span>
+                           <span>Personel</span>
+                           <span> : </span>
+                           <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                       </div>
+
+                       <div class="pd-article_left-desc-item">
+                           <span>1</span>
+                           <span>Personel</span>
+                           <span> : </span>
+                           <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                       </div>
+
+                       <div class="pd-article_left-desc-item">
+                           <span>1</span>
+                           <span>Personel</span>
+                           <span> : </span>
+                           <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                       </div>
+                   </div>
+                </div>
+                <div class="pd-article_item pd-article_right">
+                   <!-- <div class="pd-article_right_img">
+                       <img src="assets/images/" alt="">
+                   </div> -->
+                   <div class="pd-article_right-numb">
+                       <span>04</span>
+                   </div>
+                </div>
+           </div>
+
+           <div class="p-direction_article">
+            <div class="pd-article_item pd-article_left">
+               <div class="pd-article_left-title">
+                   <span class="title_1">Direction des Resources Humaines (DRH)</span>
+               </div>
+               <div class="pd-article_left-desc">
+                   <div class="pd-article_left-desc-item">
+                       <span>1 </span>
+                       <span>Personel</span>
+                       <span> : </span>
+                       <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                   </div>
+
+                   <div class="pd-article_left-desc-item">
+                       <span>1</span>
+                       <span>Personel</span>
+                       <span> : </span>
+                       <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                   </div>
+
+                   <div class="pd-article_left-desc-item">
+                       <span>1</span>
+                       <span>Personel</span>
+                       <span> : </span>
+                       <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+                   </div>
+               </div>
+            </div>
+            <div class="pd-article_item pd-article_right">
+               <!-- <div class="pd-article_right_img">
+                   <img src="assets/images/" alt="">
+               </div> -->
+               <div class="pd-article_right-numb">
+                   <span>05</span>
+               </div>
+            </div>
+       </div>
+
+       <div class="p-direction_article">
+        <div class="pd-article_item pd-article_left">
+           <div class="pd-article_left-title">
+               <span class="title_1">Direction des Resources Humaines (DRH)</span>
+           </div>
+           <div class="pd-article_left-desc">
+               <div class="pd-article_left-desc-item">
+                   <span>1 </span>
+                   <span>Personel</span>
+                   <span> : </span>
+                   <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+               </div>
+
+               <div class="pd-article_left-desc-item">
+                   <span>1</span>
+                   <span>Personel</span>
+                   <span> : </span>
+                   <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+               </div>
+
+               <div class="pd-article_left-desc-item">
+                   <span>1</span>
+                   <span>Personel</span>
+                   <span> : </span>
+                   <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+               </div>
+           </div>
+        </div>
+        <div class="pd-article_item pd-article_right">
+           <!-- <div class="pd-article_right_img">
+               <img src="assets/images/" alt="">
+           </div> -->
+           <div class="pd-article_right-numb">
+               <span>06</span>
+           </div>
+        </div>
+   </div>
+
+   <div class="p-direction_article">
+    <div class="pd-article_item pd-article_left">
+       <div class="pd-article_left-title">
+           <span class="title_1">Direction des Resources Humaines (DRH)</span>
+       </div>
+       <div class="pd-article_left-desc">
+           <div class="pd-article_left-desc-item">
+               <span>1 </span>
+               <span>Personel</span>
+               <span> : </span>
+               <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+           </div>
+
+           <div class="pd-article_left-desc-item">
+               <span>1</span>
+               <span>Personel</span>
+               <span> : </span>
+               <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+           </div>
+
+           <div class="pd-article_left-desc-item">
+               <span>1</span>
+               <span>Personel</span>
+               <span> : </span>
+               <span>Lorem ipsum dolor sit amet consectetur. Lorem, ipsum dolor.</span>
+           </div>
+       </div>
+    </div>
+    <div class="pd-article_item pd-article_right">
+       <!-- <div class="pd-article_right_img">
+           <img src="assets/images/" alt="">
+       </div> -->
+       <div class="pd-article_right-numb">
+           <span>07</span>
+       </div>
+    </div>
+</div>
+
+
                   </div>
              </div>
          </section>
